# mcp-rust

./: .gitignore  .tool-versions  Cargo.toml  DECISIONS.md  DESIGN.md  EXAMPLES.md  LICENSE  Makefile  README.md  conformance-baseline.yml
.github/workflows/: conformance.yml
crates/mcp-api-core/: Cargo.toml
crates/mcp-api-core/src/: lib.rs
crates/mcp-api-server/: Cargo.toml
crates/mcp-api-server/src/: lib.rs
crates/mcp-api-server/wit/: world.wit
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: lib.rs
crates/mcp-core/tests/: tool.rs
crates/mcp-derive/: Cargo.toml
crates/mcp-derive/src/: lib.rs
crates/mcp-server-v1/: Cargo.toml
crates/mcp-server-v1/src/: fixtures.rs  kv.rs  lib.rs  proto.rs  sse.rs
crates/mcp-server-v1/wit/: world.wit
docs/: architecture.md  authoring-tools.md  conformance.md  deploying.md  generate-from-openapi.md  getting-started.md
examples/fred/: Cargo.toml  README.md
examples/fred/src/: lib.rs
examples/fred/src/tools/: get_series.rs  get_series_observations.rs  mod.rs  search_series.rs
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: lib.rs
examples/hello-world/src/tools/: greet.rs  mod.rs
examples/petstore/: Cargo.toml  README.md
examples/petstore/src/: lib.rs
examples/petstore/src/tools/: find_pets_by_status.rs  get_inventory.rs  get_pet_by_id.rs  mod.rs
generator/: Cargo.toml
generator/src/: main.rs
scripts/: doctor.sh  size-report.sh
templates/v1-2025-11-25/: AGENTS.md  wasmcloud.toml
templates/v1-2025-11-25/deploy/: README.md  workload.yaml
templates/v1-2025-11-25/src/tools/: _template.rs  get_pet.rs  mod.rs
templates/v2-2026-07-28/: README.md
