[package]
name = "generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI 3.x -> one src/tools/<operationId>.rs per operation (host binary)."

[[bin]]
name = "generator"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
