[package]
name = "mcp-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared WASI 0.2 glue for API-bridging MCP tool servers (outbound http + serve! macro)."

[dependencies]
wit-bindgen.workspace = true
mcp-core = { path = "../mcp-core" }
mcp-api-core = { path = "../mcp-api-core" }
