[package]
name = "mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "First-party runtime glue for LLM-authored MCP tools (ToolHandle, ToolError, Json)."

[dependencies]
mcp-derive = { path = "../mcp-derive" }
serde = { workspace = true }
serde_json = { workspace = true }
