[package]
name = "petstore"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP server bridging the Swagger Petstore API."

[lib]
crate-type = ["cdylib"]

[dependencies]
mcp-api-server = { path = "../../crates/mcp-api-server" }
mcp-core = { path = "../../crates/mcp-core" }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
